# vamos-telegram-vault

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  vault.json
docs/: cinematographer-workflow.md  github-scan.md  glm-5.2-ui-prompt.md
packaging/: build_exe.py  desktop_entry.py
src/vamos_vault/: __init__.py  cli.py  config.py  db.py  desktop.py  media.py  reports.py  telegram_client.py  thumbnails.py  workflows.py
tests/: test_db.py  test_media.py  test_reports.py  test_thumbnails.py  test_workflows.py
